# Linux

./: Show  calendar.txt  randomize.sh  result1.txt  result2.txt  test.txt  test1.gdb
01/: Makefile  Show.c
02_Multifile/: Makefile  fun.c  prog.c
03_Text/: art.txt  randomize.sh
04_Debugging/: Makefile  expected1.txt  expected2.txt  range  range.c  test1.gdb  test2.gdb
05_Regexps/: esub.c
06_Tracing/: move  move.c  protect.c
07_Environmental/: Makefile.am  configure.ac  test_script.sh
07_Environmental/src/: Makefile.am  rhasher.c
08_I18n/: Makefile.in  configure  configure.ac
08_I18n/autom4te.cache/: output.0  output.2  requests  traces.0  traces.2
08_I18n/po/: Makefile.am  Makefile.in  ru.po
08_I18n/ru/LC_MESSAGES/: guess.mo
08_I18n/src/: Makefile.am  Makefile.in  guess.c
09_PatchDiff/: maze1.c.orig  maze2.c.orig  maze3.c.orig  patch1.patch  patch2.patch  patch3.patch
10_LibTesting/: Makefile.am  Makefile.in  buf.c  buf.h  configure.ac  tests.c
11_Documenting/: Makefile.am  Makefile.am~  Makefile.in~  Makefile~  configure.ac  configure.ac~  configure~
11_Documenting/po/: ru.po
11_Documenting/src/: Makefile.am  guess.c  roman.c  roman.h
12_InstallPackaging/: Doxyfile.in  Makefile.am  Makefile.in  config.h.in~  configure.ac  configure~
12_InstallPackaging/man/: greeting.1
12_InstallPackaging/po/: Makevars  POTFILES.in  greeting.pot  ru.po
12_InstallPackaging/src/: Makefile.am  Makefile.in  libgreeting.c  libgreeting.h  main.c
12_InstallPackaging/tests/: Makefile.am  Makefile.in  test_greeting.c
4/: test2.gdb
5/: Makefile  esub
6/: Makefile  test_script.sh
